fixed issue of flickering dropdowns on mobile modal, added comments

--- a/src/widgets/widgets.css
+++ b/src/widgets/widgets.css
@@ -2,8 +2,24 @@
     display: flex;
     flex-direction: column;
     margin-top: 5px; 
-    margin-bottom: 5px; 
+    margin-bottom: 5px;
+    
+    /* this is used to remove the flickering effect from clicking the drop-down 
+    NOTICED AN rare ISSUE WHERE THE DROPDOWNS BECAME UNSELECTABLE 
+    keep an eye on it*/
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
+
+.dropdown_container:focus{
+  outline: none !important; /* this is used to remove the flickering effect from clicking the drop-down */
+}
+
 
 .dropdown_title{
   display: flex;
@@ -34,14 +50,6 @@
 }
 
 
-
-/*
-#topNav ul li ul{
-   max-height:250px;   you can change as you need it 
-   overflow:auto;      to get scroll 
-}
-*/
-
 .dropdown_item{
   display: flex;
   place-content: end space-between;
@@ -59,12 +67,9 @@
     overflow-y:auto;
 }
 
-/*.dropdown-content span:hover {background-color: #ddd;}*/
-
 .dropdown_container:hover .dropdown-content {
   display: flex;
   flex-direction: column;
-
 }
 
 .cursor_hand{
@@ -110,12 +115,7 @@
       }
 }
 
-
-
-
 /*------COLLAPSIBLE MENU-------------------*/
-
-
 
 .collapsible {
   background-color: lightgrey;
